YINY-80 fix button colors to fixn ot displaying on iOS

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -62,11 +62,15 @@ body {
 }
 
 /* bootstrap style overrides */
-.btn-primary, .btn-primary.active {
+.btn.btn-primary, .btn.btn-primary.active {
   background-color: #E8E8E9;
   border-color: #FFFFFF;
   height: 58px;
   width: 58px;
+}
+
+.btn {
+    background-color: #99BBDD;
 }
 
 /* Landscape layout (with min-width) */
@@ -139,6 +143,7 @@ body {
   }
 
   #back {
+    background-color: #FFFFFF;
     background-image: url('../img/back_arrow.png');
   }
 
@@ -148,6 +153,7 @@ body {
   }
 
   .btn-icon-search {
+    background-color: #FFFFFF;
     background-image: url('../img/ic_menu_search_holo_light.png');
     background-repeat: no-repeat;
     background-size: 100%;
